fix menu icon z-index

--- a/src/UI/Components/Auth/Header/AuthHeader.module.css
+++ b/src/UI/Components/Auth/Header/AuthHeader.module.css
@@ -195,7 +195,7 @@
     }
     #menuIcon{
         display: block;
-        z-index: 9999;
+      
         font-size: 65px;
         /*top: 13px;*/
         /*left: 5px;*/
